internal class AnimationStrings
{
    //Player and Enemy
    internal static readonly string isMoving = "isMoving";
    internal static readonly string attackTrigger = "attack";
    internal static readonly string canMove = "canMove";
    internal static readonly string isAlive = "isAlive";
    internal static readonly string lockVelocity = "lockVelocity";
    internal static readonly string hitTrigger = "hit";

    //Coin Pick Up
    internal static readonly string pickUpTrigger = "pickedUp";
}
